--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,20 @@
 {
 
     "compilerOptions": {
-  
-      "allowJs": false,
+
+      "allowJs": true,
       "allowImportingTsExtensions": true,
       "esModuleInterop": true,
       "isolatedModules": true,
       "module": "ESNext",
+      "moduleResolution": "Bundler",
       "noEmit": true,
       "strict": true,
       "skipLibCheck": true,
       "target": "ESNext"
-  
+
     },
     "include": [ "src" ],
     "exclude": [ "node_modules" ]
-    
+
 }
